--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,30 @@
 
 /* Your CSS Code here. */
+*{
+	border-boxing:border-box;
+	padding:0px;
+	margin:0px;
+}
+.main{
+	display:flex;
+	justify-content:center;
+	flex-wrap:wrap;
+}
+.item3{
+	width:100px;
+	height:100px;
+	background:green;
+	font-size:50px;
+}
+.item1{
+	width:100px;
+	height:100px;
+	background:red;
+	font-size:50px;
+}
+.item2{
+	width:100px;
+	height:100px;
+	background:blue;
+	font-size:50px;
+}
